--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-
     implementation "com.google.android.material:material:1.2.1"
+
+    testImplementation "io.mockk:mockk:1.10.2"
 
     //COROUTINES
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0"
