--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,16 @@ dependencies {
     implementation "org.koin:koin-android-ext:$koin_version"
     implementation "org.koin:koin-androidx-ext:$koin_version"
 
+    //RETROFIT
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    //RECYCLERVIEW
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //CARDVIEW
+    implementation "androidx.cardview:cardview:1.0.0"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
